# ComfyUI-Thumbnails

./: ComfyUIThumbnails.py  LoadImageThumbnails.py  README.md  __init__.py  pyproject.toml
assets/: ComfyUI-Thumbnails-featured.avif
web/css/: contextMenuFilterThumbnails.css
web/js/: contextMenuFilterThumbnails.js  contextmenu.js  shared_utils.js
