[project]
name = "comfyui-thumbnails"
description = "Load Image thumbnails, delete images, browse input subfolders."
version = "1.22"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/audioscavenger/ComfyUI-Thumbnails"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "audioscavenger"
DisplayName = "ComfyUI-Thumbnails"
Icon = ""
